projects/특이점이-온-개발자-도커-쿠버네티스/code/ex09/yaml/order-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: hashicorp/http-echo:latest
          args:
            - "-text=주문 접수 완료 — 치킨버거 1개"
